--- a/src/index.scss
+++ b/src/index.scss
@@ -2,11 +2,10 @@
   position: relative;
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
 }
 
 body {
-  margin: 0;
+  background-color: black;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
