--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -4,10 +4,10 @@
   color: white;
 
   .App-header {
-    padding: 12px 8px 6px;
+    padding: 14px 8px 6px;
     width: 100%;
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.99), rgba(0, 0, 0, 0.75));
     color: goldenrod;
-    font-size: calc(10px + 2vmin);
     border-bottom: 1px solid;
   
     img {
@@ -19,6 +19,7 @@
   
     &-text {
       top: -12px;
+      font-size: calc(16px + 2vmin);
       text-shadow: 0 -1px 1px rgba(255, 255, 255, 0.33),
         0 1px 2px rgba(255, 255, 255, 0.33);
     }
