--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -4,23 +4,29 @@
   color: white;
 
   .App-header {
-    padding: 14px 8px 6px;
+    padding: 18px 8px 10px;
     width: 100%;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.99), rgba(0, 0, 0, 0.75));
+    background: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.99),
+      rgba(0, 0, 0, 0.75)
+    );
     color: goldenrod;
     border-bottom: 1px solid;
-  
+
     img {
-      margin-right: 12px;
+      display: inline-block;
+      margin-right: 24px;
+      margin-left: 24px;
       height: 64px;
       border: 1px solid goldenrod;
       border-radius: 2px;
     }
-  
+
     &-text {
-      top: -12px;
+      top: -18px;
       font-size: calc(16px + 2vmin);
-      text-shadow: 0 -1px 1px rgba(255, 255, 255, 0.33),
+      text-shadow: 0 -1px 0 rgba(255, 255, 255, 0.66),
         0 1px 2px rgba(255, 255, 255, 0.33);
     }
   }
@@ -40,5 +46,30 @@
   .view {
     padding: 8px 16px;
     text-align: center;
+  }
+}
+
+.blink {
+  font-size: 20px;
+  padding-right: 20px;
+  display: inline-block;
+}
+
+.blink:after {
+  content: '';
+  width: 20px;
+  height: 2px;
+  background: black;
+  opacity: 0;
+  display: inline-block;
+  animation: blink 1s linear infinite alternate;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
