--- a/src/components/Thing/Things.scss
+++ b/src/components/Thing/Things.scss
@@ -1,10 +1,13 @@
 .component.Thing {
-  margin: 32px auto 0;
-  padding: 8px;
+  margin: 50px auto 0;
+  padding: 24px;
   width: 512px;
   max-width: 90vw;
   height: 256px;
   background: linear-gradient(to right bottom, white, goldenrod);
   color: black;
   text-align: left;
+  border: 1px solid black;
+  border-radius: 8px;
+  box-shadow: inset(white, black), 0 1px 10px rgba(255, 255, 255, 0.66);
 }
