--- a/src/views/About/About.scss
+++ b/src/views/About/About.scss
@@ -1,6 +1,7 @@
 @keyframes move {
   50% {
-    transform: scale(10);
+    transform: rotate(1080deg) scale(5) translateY(100px);
+    opacity: 1;
   }
 }
 
@@ -8,7 +9,9 @@
   img {
     width: 64px;
     border-radius: 16px;
+    box-shadow: 0 0 8px white;
+    opacity: 0;
 
-    animation: move 10000ms linear infinite;
+    animation: move 20000ms ease infinite;
   }
 }
