--- a/src/components/Thing/Things.scss
+++ b/src/components/Thing/Things.scss
@@ -9,5 +9,5 @@
   text-align: left;
   border: 1px solid black;
   border-radius: 8px;
-  box-shadow: inset(white, black), 0 1px 10px rgba(255, 255, 255, 0.66);
+  box-shadow: 0 1.5px 8px rgba(255, 255, 255, 0.5), 0 0 16px rgba(255, 255, 255, 0.25);
 }
