--- a/src/views/About/About.scss
+++ b/src/views/About/About.scss
@@ -1,6 +1,6 @@
 @keyframes move {
   100% {
-    transform: rotate(3600deg) scale(5) translateY(100px);
+    transform: rotate(3600deg) scale(5) translateY(50px);
     opacity: 1;
   }
 }
@@ -9,9 +9,9 @@
   img {
     width: 64px;
     border-radius: 16px;
-    box-shadow: 0 0 8px white;
-    opacity: 0;
+    box-shadow: 0 1px 0 white, 0 0 8px white;
+    opacity: 0.05;
 
-    animation: move 10000ms ease forwards;
+    animation: move 20000ms ease forwards;
   }
 }
