--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -17,7 +17,7 @@
     img {
       display: inline-block;
       margin-right: 24px;
-      margin-left: 20px;
+      margin-left: 10px;
       height: 64px;
       border: 1px solid goldenrod;
       border-radius: 2px;
@@ -54,15 +54,7 @@
 }
 
 nav {
-  font-size: 20px;
   display: inline-block;
-}
-
-@keyframes blink {
-  50% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+  padding-top: 24px;
+  font-size: 20px;
 }
