clean up and add a msg to Home

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,13 +1,8 @@
 .Header {
   padding: 18px 8px 12px;
   width: 100%;
-  background: linear-gradient(
-    to right,
-    rgba(0, 0, 0, 0.99),
-    rgba(0, 0, 0, 0.75)
-  );
   color: goldenrod;
-  border-bottom: 1px solid;
+  border-bottom: 2px solid;
 
   img {
     display: inline-block;
@@ -20,8 +15,8 @@
 
   &-text {
     top: -18px;
-    font-size: calc(16px + 2vmin);
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.66),
-      0 1px 8px rgba(255, 255, 255, 0.33);
+    font-size: 32px;
+    font-weight: bold;
+    letter-spacing: 0.5px;
   }
 }
