--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,22 +1,3 @@
 .Header {
-  padding: 18px 8px 12px;
-  width: 100%;
-  color: goldenrod;
-  border-bottom: 2px solid;
-
-  img {
-    display: inline-block;
-    margin-right: 24px;
-    margin-left: 10px;
-    height: 64px;
-    border: 1px solid goldenrod;
-    border-radius: 2px;
-  }
-
-  &-text {
-    top: -18px;
-    font-size: 32px;
-    font-weight: bold;
-    letter-spacing: 0.5px;
-  }
+  text-align: center;
 }
