--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,9 +1,12 @@
 nav {
   display: flex;
   justify-content: center;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
 
   a {
     margin: 0 8px;
+    padding: 8px;
     color: black;
     text-decoration: none;
   }
