--- a/src/views/Games/SpaceInvaders/SpaceInvaders.scss
+++ b/src/views/Games/SpaceInvaders/SpaceInvaders.scss
@@ -1,4 +1,12 @@
 .game.SpaceInvaders {
+  .game-title {
+    margin-bottom: 8px;
+  }
+
+  .results {
+    margin-bottom: 8px;
+  }
+
   .grid {
     box-sizing: initial;
     display: inline-flex;
@@ -33,6 +41,31 @@
         border-radius: 50%;
         transform: scale(1.5);
       }
+    }
+  }
+
+  .controls {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px;
+
+    .left-right {
+      button:first-of-type {
+        margin-right: 4px;
+      }
+
+      button:last-of-type {
+        margin-left: 4px;
+      }
+    }
+
+    button {
+      padding: 8px 16px 9px;
+      border: 1px solid;
+      font-size: 20px;
+      font-weight: bold;
+      border-radius: 4px;
+      outline: none;
     }
   }
 }
