--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,12 @@
 .Header {
   padding: 16px;
+  @apply bg-white;
   text-align: center;
+
+  &-text {
+    @apply text-xl;
+    font-weight: bold;
+  }
 
   .sign-in-out-container {
     position: absolute;
@@ -10,8 +16,9 @@
     
     button {
       background-color: transparent;
-      border: none;
+      color: black;
       font-weight: bold;
+      border: none;
     }
   }
 }
